# Rollbot

./: .gitignore  README.md
Implementation/Code/AllTest/: CMakeLists.txt  PrunedNatNet.cpp  PrunedNatNet.hpp  main.cpp  motor.cpp
Implementation/Code/ControllerTest/: CMakeLists.txt  README.md  main.cpp  motor.cpp  motor.hpp
Implementation/Electrical/: README.md  Rollbot.brd  Rollbot.sch
Implementation/Mechanical/: 3D Printing Files.3mf  Original Files.txt
Implementation/Motor Specs/: MS5010v2.STEP
